--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "Susan Hao"
   avatar           : "/assets/images/bio-photo.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "PhD student at UC Berkeley.  Interested in data science, emotion perception, and the brain."
+  bio              : "PhD candidate at UC Berkeley.  Interested in machine learning, data science, and the brain."
   location         : "Berkeley, CA"
   email            : "susanhao16@gmail.com"
   links:
